# secaudit-plus

./: .bandit  .buildinfo  .coveragerc  .dockerignore  .editorconfig  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .semgrepignore  .yamllint  AGENTLESS_IMPLEMENTATION.md  CHANGELOG.md  CNAME  CONTRIBUTING.md  Dockerfile  FIXES_APPLIED.md  IMPLEMENTATION_SUMMARY.md  Makefile  PLAN.md  QUICKSTART_REMOTE_AUDIT.md  README.md  ROADMAP.md  SECURE_AUDIT_USER_SETUP.md  SECURITY.md  SECURITY_BEST_PRACTICES.md  SSH_SETUP_GUIDE.md  USAGE.md  docker-compose.yml  fix_flake8.py  fix_yaml_trailing_spaces.py  genindex.html  index.html  init.sh  local_network_inventory.yml  main.py  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  (+3 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  docker-publish.yml  docs.yml  release-signing.yml  release.yml  secrets-scan.yml  semgrep.yml  update-dependencies.yml
.pybuild/cpython3_3.8_secaudit-plus/: .pydistutils.cfg
_modules/: index.html
_modules/secaudit/: exceptions.html  health.html  main.html
_modules/seclib/: auth.html  redaction.html  security.html  validator.html
_modules/utils/: audit_logger.html  logger.html
_sources/modules/secaudit/: modules.rst.txt  secaudit.rst.txt
_sources/modules/seclib/: modules.rst.txt  seclib.rst.txt
_sources/modules/utils/: utils.rst.txt
docs/: AGENTLESS_AUDIT.md  CODE_SIGNING.md  DEPLOYMENT.md  ENCRYPTION.md  IMPLEMENTATION_SUMMARY.md  NETWORK_SCANNING_ARCHITECTURE.md  RBAC.md  REMOTE_AUDIT_GUIDE.md  REQUIREMENTS_LOCK.md  SETUP_SECRETS.md  THREAT_MODEL.md  profile_engine_enhancements.md  roadmap.md  secondary_tail_coverage.md  user_guide.md
docs/api/: Makefile  conf.py  index.rst
docs/examples/: github_actions_golden_image.yml  gitlab_ci_golden_image.yml  inventory_example.yml
helm/secaudit/: Chart.yaml  values.yaml
helm/secaudit/templates/: _helpers.tpl  cronjob.yaml  deployment.yaml  ingress-tls.yaml  networkpolicy.yaml  pvc.yaml  rbac.yaml  secrets.yaml  serviceaccount.yaml  servicemonitor.yaml
modules/: agentless_executor.py  assert_logic.py  audit_runner.py  bash_executor.py  cli.py  inventory_manager.py  modules.html  network_scanner.py  os_detect.py  remote_executor.py  report_diff.py  report_generator.py
modules/secaudit/: modules.html  secaudit.html
modules/seclib/: modules.html  seclib.html
modules/utils/: modules.html  utils.html
monitoring/: grafana-dashboard.json  prometheus-rules.yaml
profiles/: README.md  alt.yml  astra-1.7-ksz.yml  astra.yml  base-linux.yml  baseline.yml  centos.yml  debian.yml
profiles/base/: linux.yml  server.yml  workstation.yml
profiles/common/: baseline.yml
profiles/include/: allowlist_fstab_user_mounts.txt  allowlist_ports.txt  allowlist_rootless_sockets.txt  allowlist_sudo_nopasswd.txt  allowlist_suid_sgid.txt  containers_runtime.yml  linux_hardening.yml  vars_baseline.env  vars_paranoid.env  vars_strict.env  workstation_hardening.yml
profiles/os/: alt-8sp.yml  alt.yml  astra-1.7-ksz.yml  astra.yml  centos.yml  debian.yml  redos-7.3-8.yml
profiles/roles/: db.yml  kiosk.yml
profiles/szi/: snlsp.yml
reports/: report_template.html.j2  report_template.md.j2
results/agentless_local/: summary.json
secaudit/: __init__.py  __main__.py  exceptions.py  health.py  main.py
seclib/: __init__.py  auth.py  encryption.py  redaction.py  security.py  validator.py
tests/: test_assert_logic.py  test_audit_runner.py  test_bash_executor.py  test_benchmarks.py  test_cli.py  test_exceptions.py  test_integration.py  test_logger.py  test_missing_dependencies.py  test_os_detect.py  test_profiles.py  test_report_diff.py  test_report_exports.py  test_security.py  test_validator.py
utils/: __init__.py  audit_logger.py  logger.py
workflows/: Makefile  ci.yml  release.yml
